--- a/View/ChartingView.xaml
+++ b/View/ChartingView.xaml
@@ -35,7 +35,7 @@
                     <MenuItem x:Name="closeSchema" Header="Close" Click="closeSchema_Click"/>
                     <MenuItem x:Name="exit" Header="Exit" Click="exit_Click"/>
                 </MenuItem>
-                <MenuItem Header="Schema" Width="60" TextOptions.TextFormattingMode="Display" FontSize="14" FontFamily="Times New Roman" HorizontalContentAlignment="Center">
+                <MenuItem x:Name="schemeItem" Header="Scheme" Width="60" TextOptions.TextFormattingMode="Display" FontSize="14" FontFamily="Times New Roman" HorizontalContentAlignment="Center" IsEnabled="False">
                     <MenuItem x:Name="addFunction" Header="Add function" Click="addFunction_Click"/>
                     <MenuItem x:Name="alterFunction" Header="Alter function" Click="alterFunction_Click"/>
                     <MenuItem x:Name="deleteFunction" Header="Delete function" Click="deleteFunction_Click"/>
