--- a/View/GraphicsElement.xaml
+++ b/View/GraphicsElement.xaml
@@ -14,16 +14,16 @@
                     <dvc:Chart x:Name="chart"/>
                 </WindowsFormsHost>
                 <Label Content="Формула" HorizontalAlignment="Left" Margin="88,37,0,0" VerticalAlignment="Top" Width="68" FontFamily="Times New Roman" FontSize="14" FontStyle="Italic"/>
-                <TextBox x:Name="function_txt" HorizontalAlignment="Left" Height="23" Margin="50,62,0,0" TextWrapping="Wrap" Text="5*x+4*x^2" VerticalAlignment="Top" Width="192"/>
+                <TextBox x:Name="function_txt" HorizontalAlignment="Left" Height="23" Margin="50,62,0,0" TextWrapping="Wrap" Text="5*x+4*x^2" VerticalAlignment="Top" Width="192" IsReadOnly="True"/>
                 <Label Content="y = " HorizontalAlignment="Left" Margin="8,58,0,0" VerticalAlignment="Top" Width="28"/>
                 <Label Content="Параметры" HorizontalAlignment="Left" Margin="78,87,0,0" VerticalAlignment="Top" Width="82" FontFamily="Times New Roman" FontSize="14" FontStyle="Italic"/>
-                <TextBox x:Name="step_txt" HorizontalAlignment="Left" Height="23" Margin="50,112,0,0" TextWrapping="Wrap" Text="0,1" VerticalAlignment="Top" Width="64" HorizontalContentAlignment="Center"/>
-                <TextBox x:Name="name_txt" HorizontalAlignment="Left" Height="23" Margin="50,10,0,0" TextWrapping="Wrap" Text="Название графика" VerticalAlignment="Top" Width="192" HorizontalContentAlignment="Center"/>
+                <TextBox x:Name="step_txt" HorizontalAlignment="Left" Height="23" Margin="50,112,0,0" TextWrapping="Wrap" Text="0,1" VerticalAlignment="Top" Width="64" HorizontalContentAlignment="Center" IsReadOnly="True"/>
+                <TextBox x:Name="name_txt" HorizontalAlignment="Left" Height="23" Margin="50,10,0,0" TextWrapping="Wrap" Text="Название графика" VerticalAlignment="Top" Width="192" HorizontalContentAlignment="Center" IsReadOnly="True"/>
                 <Label Content="шаг:" HorizontalAlignment="Left" Margin="8,111,0,0" VerticalAlignment="Top" Width="37"/>
                 <Label Content="min:" HorizontalAlignment="Left" Margin="8,142,0,0" VerticalAlignment="Top" Width="37"/>
                 <Label Content="max:" HorizontalAlignment="Left" Margin="119,142,0,0" VerticalAlignment="Top" Width="37"/>
-                <TextBox x:Name="min_txt" HorizontalAlignment="Left" Height="23" Margin="50,145,0,0" TextWrapping="Wrap" Text="0,1" VerticalAlignment="Top" Width="64" HorizontalContentAlignment="Center"/>
-                <TextBox x:Name="max_txt" HorizontalAlignment="Left" Height="23" Margin="163,145,0,0" TextWrapping="Wrap" Text="0,1" VerticalAlignment="Top" Width="64" HorizontalContentAlignment="Center"/>
+                <TextBox x:Name="min_txt" HorizontalAlignment="Left" Height="23" Margin="50,145,0,0" TextWrapping="Wrap" Text="0,1" VerticalAlignment="Top" Width="64" HorizontalContentAlignment="Center" IsReadOnly="True"/>
+                <TextBox x:Name="max_txt" HorizontalAlignment="Left" Height="23" Margin="163,145,0,0" TextWrapping="Wrap" Text="0,1" VerticalAlignment="Top" Width="64" HorizontalContentAlignment="Center" IsReadOnly="True"/>
                 <Label x:Name="id_txt" Content="1" HorizontalAlignment="Left" Margin="13,9,0,0" VerticalAlignment="Top" Width="22" FontFamily="Times New Roman" FontSize="14" FontStyle="Italic"/>
             </Grid>
         </Border>
