--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Charting.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="View/ChartingView.xaml">
+             StartupUri="View/SplashScreen.xaml">
     <Application.Resources>
          
     </Application.Resources>
